# comfy-aimdo-big

./: .gitignore  build-linux-docker  build-rocm-local  build-rocm-local_win.ps1  pyproject.toml
.github/workflows/: build-wheels.yml
comfy_aimdo/: control.py  model_vbar.py  vram_buffer.py
docker/: cuda-on-manylinux.Dockerfile
examples/: example.py
scripts/: build-linux-aimdo.sh
src/: control.c  control.h  cuda-hooks-shared.h  cuda_abi.h  cuda_dispatch.c  cuda_dispatch.h  gpu_abi.h  gpu_dispatch.h  hostbuf.c  model-vbar.c  plat.h  plat_cuda.h  plat_hip.h  pyt-cu-plug-alloc-async.c  pyt-cu-plug-alloc.c  vrambuf.c
src-cuda/: dispatch.c
src-hip/: dispatch.c
src-posix/: cuda-funchooks.c  detour-hip.c  model-mmap.c
src-win/: compiler.h  cuda-detour.c  model-mmap.c  shmem-detect.c
