[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-aimdo"
dynamic = ["version"]
description = "AI Model Dynamic Offloader for ComfyUI"
readme= "README.md"
requires-python = ">=3.9"
authors = [{name = "rattus"}]

[project.urls]
Repository = "https://github.com/Comfy-Org/comfy-aimdo"

[tool.setuptools]
packages = ["comfy_aimdo"]

[tool.setuptools.package-data]
"comfy_aimdo" = ["*.so", "*.dll"]

[tool.setuptools_scm]
version_file = "comfy_aimdo/_version.py"
local_scheme = "no-local-version"
